--- a/portfolio.html
+++ b/portfolio.html
@@ -1,26 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="../Basic-Portfolio/assets/css/cssReset.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Jamie's Portfolio</title>
 </head>
 
 <body>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg bg-light navbar-light">
+            <h1 class="navbar-nav mr-auto navTitle">Jamie O'Neill, Pharm.D.</h1>
 
-    <header>
-            <div>
-                <h1>Jamie O'Neill, Pharm.D.</h1>
+            <ul class="navbar-nav navOptions">
+                <li class="nav-item active">
+                    <a class="nav-link borderRight" href="index.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link borderRight" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a  class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    <!-- </div>
+    
+    <div class="container"> -->
+        <div class="jumbotron mainSection">
+            <h1>Portfolio</h1>
+            <hr>
+            <div class="row justify-content-md-center">
                 <div>
-                    <a href="index.html">About</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="contact.html">Contact</a>
+                    <img src="assets/images/Alaska.JPG" alt="Alaska" class="img-thumbnail">
                 </div>
-            </div>  
-        </header>
+                <div>
+                    <img src="assets/images/losCabos.JPG" alt="losCabos" class="img-thumbnail">
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div>
+                    <img src="assets/images/Brussels.JPG" alt="Brussels" class="img-thumbnail">
+                </div>
+                <div>
+                    <img src="assets/images/Cambodia.JPG" alt="Cambodia" class="img-thumbnail">
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div>
+                    <img src="assets/images/Thailand.JPG" alt="Thailand" class="img-thumbnail">
+                </div>
+                <div>
+                    <img src="assets/images/Hawaii.jpg" alt="Hawaii" class="img-thumbnail">
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div>
+                    <img src="assets/images/jamCruise.jpg" alt="jamCruise" class="img-thumbnail">
+                </div>
+                <div>
+                    <img src="assets/images/Bahamas.JPG" alt="Bahamas" class="img-thumbnail">
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div>
+                    <img src="assets/images/Prague.JPG" alt="Prague" class="img-thumbnail">
+                </div>
+                <div>
+                    <img src="assets/images/puntaCana.JPG" alt="puntaCana" class="img-thumbnail">
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div>
+                    <img src="assets/images/sanJuan.JPG" alt="sanJuan" class="img-thumbnail">
+                </div>
+                <div>
+                    <img src="assets/images/costaRica.JPG" alt="costaRica" class="img-thumbnail">
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-   <section>
+   <!-- <section>
         <h2>Portfolio</h2>
         <hr>
         <table>
@@ -110,7 +173,7 @@
             </tr>
         </table>
 
-    </section>
+    </section> -->
 
 <footer>Copyright</footer>
 </body>
