updates to portfolio css

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,149 +32,72 @@
             <h1>Portfolio</h1>
             <hr>
             <div class="row justify-content-md-center">
-                <div>
+                <div class="relativePosition">
                     <img src="assets/images/Alaska.JPG" alt="Alaska" class="img-thumbnail">
+                    <h2 class="absolutePosition text-center">Alaska</h2>
                 </div>
-                <div>
+                <div class="relativePosition">
                     <img src="assets/images/losCabos.JPG" alt="losCabos" class="img-thumbnail">
+                    <h2 class="absolutePosition text-center">Los Cabos</h2>
                 </div>
             </div>
             <div class="row justify-content-md-center">
-                <div>
+                <div class="relativePosition">
                     <img src="assets/images/Brussels.JPG" alt="Brussels" class="img-thumbnail">
+                    <h2 class="absolutePosition text-center">Brussels</h2>
                 </div>
-                <div>
+                <div class="relativePosition">
                     <img src="assets/images/Cambodia.JPG" alt="Cambodia" class="img-thumbnail">
+                    <h2 class="absolutePosition text-center">Cambodia</h2>
                 </div>
             </div>
             <div class="row justify-content-md-center">
-                <div>
+                <div class="relativePosition">
                     <img src="assets/images/Thailand.JPG" alt="Thailand" class="img-thumbnail">
+                    <h2 class="absolutePosition text-center">Thailand</h2>
                 </div>
-                <div>
+                <div class="relativePosition">
                     <img src="assets/images/Hawaii.jpg" alt="Hawaii" class="img-thumbnail">
+                    <h2 class="absolutePosition text-center">Hawaii</h2>
                 </div>
             </div>
             <div class="row justify-content-md-center">
-                <div>
+                <div class="relativePosition">
                     <img src="assets/images/jamCruise.jpg" alt="jamCruise" class="img-thumbnail">
+                    <h2 class="absolutePosition text-center">Jam Cruise</h2>
                 </div>
-                <div>
+                <div class="relativePosition">
                     <img src="assets/images/Bahamas.JPG" alt="Bahamas" class="img-thumbnail">
+                    <h2 class="absolutePosition text-center">Bahamas</h2>
                 </div>
             </div>
             <div class="row justify-content-md-center">
-                <div>
+                <div class="relativePosition">
                     <img src="assets/images/Prague.JPG" alt="Prague" class="img-thumbnail">
+                    <h2 class="absolutePosition text-center">Prague</h2>
                 </div>
-                <div>
+                <div class="relativePosition">
                     <img src="assets/images/puntaCana.JPG" alt="puntaCana" class="img-thumbnail">
+                    <h2 class="absolutePosition text-center">Punta Cana</h2>
                 </div>
             </div>
             <div class="row justify-content-md-center">
-                <div>
+                <div class="relativePosition">
                     <img src="assets/images/sanJuan.JPG" alt="sanJuan" class="img-thumbnail">
+                    <h2 class="absolutePosition text-center">San Juan</h2>
                 </div>
-                <div>
+                <div class="relativePosition">
                     <img src="assets/images/costaRica.JPG" alt="costaRica" class="img-thumbnail">
+                    <h2 class="absolutePosition text-center">Costa Rica</h2>
                 </div>
             </div>
         </div>
+    </div> 
+
+
+  
+        <footer>Copyright</footer>
+        </div>
     </div>
-
-
-   <!-- <section>
-        <h2>Portfolio</h2>
-        <hr>
-        <table>
-            <tr>
-                <td>    
-                    <div>
-                        <img src="../Basic-Portfolio/assets/images/Alaska.JPG" alt="Alaska">
-                        <h3>Alaska</h3>
-                    </div>
-                </td>
-                <td>
-                    <div>
-                        <img src="../Basic-Portfolio/assets/images/Bahamas.JPG" alt="Bahamas">
-                        <h3>Bahamas</h3>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div>
-                        <img src="../Basic-Portfolio/assets/images/Brussels.JPG" alt="Brussels">
-                        <h3>Brussels</h3>
-                    </div>
-                </td>
-                <td>
-                    <div>
-                        <img src="../Basic-Portfolio/assets/images/Cambodia.JPG" alt="Cambodia">
-                        <h3>Cambodia</h3>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div>
-                        <img src="../Basic-Portfolio/assets/images/costaRica.JPG" alt="Costa Rica">
-                        <h3>Costa Rica</h3>
-                    </div>
-                </td>
-                <td>
-                    <div>
-                        <img src="../Basic-Portfolio/assets/images/Hawaii.jpg" alt="Hawaii">
-                        <h3>Hawaii</h3>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div>
-                        <img src="../Basic-Portfolio/assets/images/jamCruise.jpg" alt="Jam Cruise">
-                        <h3>Jam Cruise</h3>
-                    </div>
-                </td>
-                <td>
-                    <div>
-                        <img src="../Basic-Portfolio/assets/images/losCabos.JPG" alt="Los Cabos">
-                        <h3>Los Cabos</h3>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div>
-                        <img src="../Basic-Portfolio/assets/images/Prague.JPG" alt="Prague">
-                        <h3>Prague</h3>
-                    </div>
-                </td>
-                <td>
-                    <div>
-                        <img src="../Basic-Portfolio/assets/images/puntaCana.JPG" alt="Punta Cana">
-                        <h3>Punta Cana</h3>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div>
-                        <img src="../Basic-Portfolio/assets/images/sanJuan.JPG" alt="San Juan">
-                        <h3>San Juan</h3>
-                    </div>
-                </td>
-                <td>
-                    <div>
-                        <img src="../Basic-Portfolio/assets/images/Thailand.JPG" alt="Thailand">
-                        <h3>Thailand</h3>
-                    </div>
-                </td>
-            </tr>
-        </table>
-
-    </section> -->
-
-<footer>Copyright</footer>
 </body>
 </html>
